Fix: institution and transaction swagger (#15)
* fix: update user-example-service

* feat: add .env.example

* feat: add .gitignore

* feat: add Dockerfile

* feat: add Makefile

* fix: institution Dockerfile

* feat: add institution.proto

* feat: add http error

* feat: add postgresql connection

* feat: add institution handler

* feat: add institution model

* feat: add institution repository

* feat: add institution routes

* feat: add institution usecase

* feat: grpc authentication

* feat: add generate and verify institution token

* feat: add echo server and grpc listener

* fix: institution handler

* fix: institution routes

* fix: institution repo

* fix: message delete institution handler

* feat: adding post CRUD

* feat: adding fund collection

* fix: port Dockerfile

* fix: default grpc port

* feat: adding post usecase to fund collect

* fix: main institution auto migrate

* feat: adding fund collect to public endpoint

* feat: fund collect

* fix: auth exception

* fix: token institution

* feat: .env

* feat: adding transaction

* feat: adding .gitignore

* feat: adding builk dockerfile

* fix: transaction handler post id

* feat: implement xendit payment

* fix: user response xendit handler

* fix: transaction handler

* fix: cloud build transaction

* feat: adding cloud build

* feat: connection cloud build

* fix: main user service example

* fix: module user-service-example

* fix: user-service-example cloud run

* fix: init grcp server

* refactor: institution-service to deploy cloud run

* checkpoint: cloud run transaction

* fix: get id inside ObjectID

* fix: institution-service user id and time

* feat: adding swagger docs in institution

* feat: adding swagger to institution, post, and funding collection

* fix: institution post routes

* fix: docs swagger left behind

* feat: adding whitelist for GetAllPost

* fix: institution get data by token

* fix: update post on field date start and date end

* feat: adding institution testing

* fe
