# institution-service/docs/swagger.yaml
@@ -110,7 +110,7 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 paths:
-  /v1/fund-collect/{id}:
+  /v1/fund-collect/post/{id}:
     get:
       consumes:
       - application/json
@@ -121,7 +121,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: Institution ID
+      - description: Post ID
         in: path
         name: id
         required: true
